--- a/source/backmatter/appendix-1.tex
+++ b/source/backmatter/appendix-1.tex
@@ -8,14 +8,14 @@ Nulla facilisi. In vel sem. Morbi id urna in diam dignissim feugiat. Proin moles
 \qauthor{Quoteauthor Lastname}
 \end{savequote}
 
-\chapter{Appendix}
-		\label{appendix}
+\chapter{The Force Awakens}
+		\label{appendix-1}
 
 %=========================================================================
 
-\section{The Force Awakens}
+\section{Introduction}
 
-\lipsum[50-55]\cite{Drewitt2015}
+\lipsum[50-55]\cite{Lucas7}
 
 %=========================================================================
 
