--- a/source/backmatter/appendix-2.tex
+++ b/source/backmatter/appendix-2.tex
@@ -1,5 +1,5 @@
 % path to figures directory
-\graphicspath{{figures/chapter-5/}}
+\graphicspath{{figures/appendix/}}
 
 %=========================================================================
 
@@ -8,16 +8,16 @@ Nulla facilisi. In vel sem. Morbi id urna in diam dignissim feugiat. Proin moles
 \qauthor{Quoteauthor Lastname}
 \end{savequote}
 
-\chapter{A New Hope}
-  %\label{chapter:}
+\chapter{Episode VIII}
+		\label{appendix-2}
 
 %=========================================================================
 
-\section{Introduction}
+\section{Not named yet}
 
-\lipsum[1]
-\cite{Lucas4}
+\lipsum[56-70]\cite{Lucas8}
 
 %=========================================================================
 
 \mybib{bib/test.bib}
+
