--- a/source/bib/test.bib
+++ b/source/bib/test.bib
@@ -1,178 +1,72 @@
-@Article{Narten1967,
-author ="Narten, A. H. and Danford, M. D. and Levy, H. A.",
-title  ="X-ray diffraction study of liquid water in the temperature range 4-200$^{\circ}$C",
-journal  ="Discuss. Faraday Soc.",
-year  ="1967",
-volume  ="43",
-issue  ="0",
-pages  ="97-107",
-publisher  ="The Royal Society of Chemistry",
+@Article{Mao,
+author ={{Liu, Maoyuan}},
+title ={{This {{\LaTeX}} thesis template}},
+journal ={{Macbook Pro}},
+year ={{2015}},
+volume ={{1}},
+pages ={{50}}
 }
-@article{Lorch1969,
-  author={E Lorch},
-  title={Neutron diffraction by germania, silica and radiation-damaged silica glasses},
-  journal={Journal of Physics C: Solid State Physics},
-  volume={2},
-  number={2},
-  pages={229},
-  year={1969},
+@Article{Lucas1,
+author={{Lucas, George}},
+title = {{Star Wars Episode I: The Phantom Menace}},
+journal ={{Lucasfilm}},
+year ={{1999}},
+volume ={{1}},
+pages ={{1}}
 }
-@article{Salmon2006,
-  author={Philip S Salmon},
-  title={Decay of the pair correlations and small-angle scattering for binary liquids and glasses},
-  journal={Journal of Physics: Condensed Matter},
-  volume={18},
-  number={50},
-  pages={11443},
-  year={2006},
+@Article{Lucas2,
+author={{Lucas, George}},
+title ={{Star Wars Episode II: Attack of the Clones}},
+journal ={{Lucasfilm}},
+year ={{2002}},
+volume ={{2}},
+pages ={{2}}
 }
-@article{Soper2011,
-author = "Soper, Alan K. and Barney, Emma R.",
-title = "{Extracting the pair distribution function from white-beam X-ray total scattering data}",
-journal = "Journal of Applied Crystallography",
-year = "2011",
-volume = "44",
-number = "4",
-pages = "714--726",
-month = "Aug",
+@Article{Lucas3,
+author={{Lucas, George}},
+title ={{Star Wars Episode III: Revenge of the Sith}},
+journal ={{Lucasfilm}},
+year ={{2005}},
+volume ={{3}},
+pages ={{3}}
 }
-@misc{FactSageNote,
-note = {Reference thermodynamic properties calculated using \verb|FactSage| version 6.4 with the \verb|FTOxid| database}
+@Article{Lucas4,
+author={{Lucas, George}},
+title ={{Star Wars Episode IV: A New Hope}},
+journal ={{Lucasfilm}},
+year ={{1977}},
+volume ={{4}},
+pages ={{4}}
 }
-@article{Drewitt2015,
-  author={James W E Drewitt and Sandro Jahn and Chrystèle Sanloup and Charlotte de Grouchy and Gaston Garbarino and Louis Hennet},
-  title={Development of chemical and topological structure in aluminosilicate liquids and glasses at high pressure},
-  journal={Journal of Physics: Condensed Matter},
-  volume={27},
-  number={10},
-  pages={105103},
-  year={2015},
+@Article{Lucas5,
+author={{Lucas, George}},
+title ={{Star Wars Episode V: The Empire Strikes Back}},
+journal ={{Lucasfilm}},
+year ={{1980}},
+volume ={{5}},
+pages ={{5}}
 }
-@article{Drewitt2012,
-  title = {Structural Transformations on Vitrification in the Fragile Glass-Forming System ${\mathrm{CaAl}}_{2}{\mathbf{O}}_{4}$},
-  author = {Drewitt, James W. E. and Hennet, Louis and Zeidler, Anita and Jahn, Sandro and Salmon, Philip S. and Neuville, Daniel R. and Fischer, Henry E.},
-  journal = {Phys. Rev. Lett.},
-  volume = {109},
-  issue = {23},
-  pages = {235501},
-  numpages = {5},
-  year = {2012},
-  publisher = {American Physical Society},
+@Article{Lucas6,
+author={{Lucas, George}},
+title ={{Star Wars Episode VI: Return of the Jedi}},
+journal ={{Lucasfilm}},
+year ={{1983}},
+volume ={{6}},
+pages ={{6}}
 }
-@article{Faber1965,
-author = { T. E.   Faber  and  J. M.   Ziman },
-title = {A theory of the electrical properties of liquid metals},
-journal = {Philosophical Magazine},
-volume = {11},
-number = {109},
-pages = {153-173},
-year = {1965}
+@Article{Lucas7,
+author={{Lucas, George}},
+title ={{Star Wars Episode VII: The Force Awakens}},
+journal ={{Lucasfilm}},
+year ={{2015}},
+volume ={{7}},
+pages ={{7}}
 }
-@article{Ashcroft1967,
-  title = {Structure of Binary Liquid Mixtures. I},
-  author = {Ashcroft, N. W. and Langreth, David C.},
-  journal = {Phys. Rev.},
-  volume = {156},
-  issue = {3},
-  pages = {685--692},
-  year = {1967},
-}
-@article{Ashcroft1967a,
-  title = {Structure of Binary Liquid Mixtures. II. Resistivity of Alloys and the Ion-Ion Interaction},
-  author = {Ashcroft, N. W. and Langreth, David C.},
-  journal = {Phys. Rev.},
-  volume = {159},
-  issue = {3},
-  pages = {500--510},
-  numpages = {0},
-  year = {1967},
-}
-@article{Fischer2006,
-  author={Henry E Fischer and Adrian C Barnes and Philip S Salmon},
-  title={Neutron and x-ray diffraction studies of liquids and glasses},
-  journal={Reports on Progress in Physics},
-  volume={69},
-  number={1},
-  pages={233},
-  year={2006},
-}
-@article{Matsui1994,
-author="Matsui, M.",
-title="A transferable interatomic potential model for crystals and melts in the system Cao-MgO-Al_2O_3-SiO_2",
-journal="Mineral. Mag.",
-year="1994",
-volume="58",
-pages="571-572",
-}
-@article{Bouhadja2014,
-author = {M. Bouhadja and N. Jakse and A. Pasturel},
-title = {Stokes–Einstein violation and fragility in calcium aluminosilicate glass formers: a molecular dynamics study},
-journal = {Molecular Simulation},
-volume = {40},
-number = {1-3},
-pages = {251-259},
-year = {2014},
-}
-@article{Salmon2013,
-author = {Salmon, P. S. and Zeidler, A.},
-title = {Identifying and characterising the different structural length scales in liquids and glasses: an experimental approach},
-journal = {Phys. Chem. Chem. Phys.},
-volume = {15},
-year = {2013},
-pages = {15286--15308}
-}
-@article{Akola2013,
-author = {Akola, J. and Kohara, S. and Ohara, K. and Fujiwara, A. and Watanabe, Y. and Masuno, A. and Usuki, T. and Kubo, T. and Nakahira, A. and Nitta, K. and Uruga, T. and Weber, J. K. R. and Benmore, C.},
-title = {Network topology for the formation of solvated electrons in binary CaO–Al2O3 composition glasses},
-journal = {Proc. Natl. Acad. Sci. USA},
-volume = {110},
-issue = {25},
-year = {2013},
-pages = {10129--10134}
-}
-@article{Bouhadja2013,
-   author = "Bouhadja, M. and Jakse, N. and Pasturel, A.",
-   title = "Structural and dynamic properties of calcium aluminosilicate melts: A molecular dynamics study",
-   journal = "The Journal of Chemical Physics",
-   year = "2013",
-   volume = "138",
-   number = "22", 
-   pages = "224510"
-}
-@article{Skinner2012,
-author = {Skinner, L. B. and Benmore, C. J. and Weber, J. K. R. and Tumber, S. and Lazareva, L. and Neuefeind, J. and Santodonato, L. and Du, J. and Parise, J. B.},
-title = {Structure of Molten CaSiO3: Neutron Diffraction Isotope Substitution with Aerodynamic Levitation and Molecular Dynamics Study},
-journal = {The Journal of Physical Chemistry B},
-volume = {116},
-number = {45},
-pages = {13439-13447},
-year = {2012}
-}
-@article{Skinner2012a,
-  title = {Structure and triclustering in Ba-Al-O glass},
-  author = {Skinner, Lawrie B. and Barnes, Adrian C. and Salmon, Philip S. and Fischer, Henry E. and Drewitt, James W. E. and Honkim\"aki, Veijo},
-  journal = {Phys. Rev. B},
-  volume = {85},
-  issue = {6},
-  pages = {064201},
-  year = {2012},
-}
-@article{Skinner2014,
-  title = {Low Cation Coordination in Oxide Melts},
-  author = {Skinner, L. B. and Benmore, C. J. and Weber, J. K. R. and Du, J. and Neuefeind, J. and Tumber, S. K. and Parise, J. B.},
-  journal = {Phys. Rev. Lett.},
-  volume = {112},
-  issue = {15},
-  pages = {157801},
-  numpages = {5},
-  year = {2014},
-}
-@article{Jaynes1965,
-   author = "Jaynes, E. T.",
-   title = "Gibbs vs Boltzmann Entropies",
-   journal = "American Journal of Physics",
-   year = "1965",
-   volume = "33",
-   number = "5", 
-   pages = "391-398",
+@Article{Lucas8,
+author={{Lucas, George}},
+title ={{Star Wars Episode VIII: Unamed}},
+journal ={{Lucasfilm}},
+year ={{2017}},
+volume ={{8}},
+pages ={{8}}
 }
