--- a/source/main.tex
+++ b/source/main.tex
@@ -58,17 +58,19 @@
         \include{chapters/chapter-4}
         \include{chapters/chapter-5}
         \include{chapters/chapter-6}
+        \include{chapters/chapter-7}
 
     \end{mainmatter}
 
     %%
     %% Appendix
     %%
-    \begin{appendix}
+    \begin{appendices}
 
-        \include{backmatter/appendix}
+        \include{backmatter/appendix-1}
+        \include{backmatter/appendix-2}
 
-    \end{appendix}
+    \end{appendices}
 
     %%
     %% Back matter
