--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -93,6 +93,7 @@
             margin=0pt,
             figurewithin=chapter,
             tablewithin=chapter]{caption}
+\usepackage[titletoc]{appendix}
 
 % fancy chapter titles and quotes at beginning of title
 \usepackage[helvetica]{quotchap} 
